--- a/react/components/QrCode/global.css
+++ b/react/components/QrCode/global.css
@@ -15,6 +15,9 @@ body {
     background: linear-gradient(to bottom, rgba(0,206,151,1) 0%, rgba(0,127,157,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ce97', endColorstr='#007f9d', GradientType=0 );
 }
+.easyshop .bg-base {
+    background-color: transparent !important;
+}
 .header {
     display: flex;
     flex-direction: row;
@@ -22,6 +25,7 @@ body {
     justify-content: space-between;
     padding: 1em;
     margin: 0 !important;
+    background-color: transparent;
 }
 .header .shop-name img {
     height: 35px;
