fix css backgound color

--- a/react/components/Easyshop/global.css
+++ b/react/components/Easyshop/global.css
@@ -4,8 +4,11 @@
     flex-direction: column;
     align-items: center;
     color: #fff;
-    background: red;
+    /* background: red; */
     height: 100vh;
+    
+}
+body.bg-base {
     background: rgba(0,206,151,1);
     background: -moz-linear-gradient(top, rgba(0,206,151,1) 0%, rgba(0,127,157,1) 100%);
     background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,206,151,1)), color-stop(100%, rgba(0,127,157,1)));
