--- a/react/components/QrCode/global.css
+++ b/react/components/QrCode/global.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
-body {
-    background: red;
+.vtex-store__template.bg-base {
+    background-color: transparent;
+}
+
+body.bg-base {
     height: 100vh;
     font-family: 'Montserrat', sans-serif !important;
-}
-.bg-base{
     background: rgba(0,206,151,1);
     background: -moz-linear-gradient(top, rgba(0,206,151,1) 0%, rgba(0,127,157,1) 100%);
     background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,206,151,1)), color-stop(100%, rgba(0,127,157,1)));
@@ -14,9 +15,6 @@ body {
     background: -ms-linear-gradient(top, rgba(0,206,151,1) 0%, rgba(0,127,157,1) 100%);
     background: linear-gradient(to bottom, rgba(0,206,151,1) 0%, rgba(0,127,157,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ce97', endColorstr='#007f9d', GradientType=0 );
-}
-.easyshop .bg-base {
-    background-color: transparent !important;
 }
 .header {
     display: flex;
