--- a/react/components/QrCode/global.css
+++ b/react/components/QrCode/global.css
@@ -180,9 +180,18 @@ form.float-form .formscroll header > button div {
     display: flex;
     justify-content: center;
     width: 100%;
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 10px;
+    margin-top: 10px
+}
+
+.qrcode-btn {
+    display: flex;
+    justify-content: center;
+}
+
+.btn-qrcode {
+    display: flex;
+    justify-content: center;
+    margin-top: 2em;
 }
 
 .vtex-modal__modal, .product-wrapper {
