--- a/react/components/QrCode/global.css
+++ b/react/components/QrCode/global.css
@@ -207,3 +207,24 @@ form.float-form .formscroll header > button div {
     margin: 10px 0;
     font-size: 18px;
 }
+
+.categorias {
+    background-color: #fff;
+    border-radius: 15px;
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column ;
+    justify-content: space-between;
+    align-content: center;
+}
+.cat{
+    text-align: center;
+    margin-bottom: 1em;
+}
+.btn{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto .80em auto;
+}
+.btn a:first-child{margin-right: 1em;}
